--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,18 @@ readme = "README.md"
 python = "^3.9"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.2.2"
+blue = "^0.9.1"
+isort = "^5.13.2"
+taskipy = "^1.13.0"
+
+
+[tool.poetry.group.doc.dependencies]
+mkdocs-material = "^9.5.27"
+mkdocstrings = "^0.25.1"
+mkdocstrings-python = "^1.10.5"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
