--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pytest = "^8.2.2"
 blue = "^0.9.1"
 isort = "^5.13.2"
 taskipy = "^1.13.0"
+pytest-cov = "^5.0.0"
 
 
 [tool.poetry.group.doc.dependencies]
@@ -24,3 +25,18 @@ mkdocstrings-python = "^1.10.5"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+pythonpath = "."
+addopts = "--doctest-modules"
+
+[tool.isort]
+profile = "black"
+line_length = 79
+
+[tool.taskipy.tasks]
+lint = "blue --check --diff . && isort --check --diff ."
+docs = "mkdocs serve"
+pre_test = "task lint"
+test = "pytest -s -x --cov=identificador_pii -vv"
+post_test = "coverage html"
