--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "identificador-pii"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Pedro Campagna <pedrohcmds@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -32,7 +32,7 @@ addopts = "--doctest-modules"
 
 [tool.isort]
 profile = "black"
-line_length = 79
+line_length = 99
 
 [tool.taskipy.tasks]
 lint = "blue --check --diff . && isort --check --diff ."
