--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+pandas = "^2.2.2"
+
 
 
 [tool.poetry.group.dev.dependencies]
@@ -21,6 +23,9 @@ pytest-cov = "^5.0.0"
 mkdocs-material = "^9.5.27"
 mkdocstrings = "^0.25.1"
 mkdocstrings-python = "^1.10.5"
+ipykernel = "^6.29.5"
+pandas = "^2.2.2"
+
 
 [build-system]
 requires = ["poetry-core"]
