--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,3 +12,11 @@ markdown_extensions:
 
 extra_css:
   - stylesheets/extra.css
+
+
+
+plugins:
+- mkdocstrings:
+    handlers:
+      python:
+        paths: [identificador]
