--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,6 @@ readme = "README.md"
 python = "^3.9"
 pandas = "^2.2.2"
 
-
-
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
 blue = "^0.9.1"
@@ -21,10 +19,11 @@ pytest-cov = "^5.0.0"
 
 [tool.poetry.group.doc.dependencies]
 mkdocs-material = "^9.5.27"
-mkdocstrings = "^0.25.1"
-mkdocstrings-python = "^1.10.5"
 ipykernel = "^6.29.5"
 pandas = "^2.2.2"
+poetry = "^1.8.3"
+mkdocstrings = {extras = ["python"], version = "^0.26.1"}
+mkdocstrings-python = "^1.11.1"
 
 
 [build-system]
