--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ pandas = "^2.2.2"
 poetry = "^1.8.3"
 mkdocstrings = {extras = ["python"], version = "^0.26.1"}
 mkdocstrings-python = "^1.11.1"
+jinja2 = "^3.1.4"
+mkdocs-mermaid2-plugin = "^1.1.1"
 
 
 [build-system]
