--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ pytest-cov = "^5.0.0"
 
 
 [tool.poetry.group.doc.dependencies]
-mkdocs-material = "^9.5.27"
+mkdocs-material = "==9.*"
 ipykernel = "^6.29.5"
 pandas = "^2.2.2"
 poetry = "^1.8.3"
