--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,8 @@ repo_url: https://github.com/pedrohcmds/identificador-pii
 repo_name: projeto-pii-brasil
 edit_uri: tree/main/docs
 
-theme:
-  name: readthedocs
+theme: 
+  name: material
   language: pt-BR
 
 markdown_extensions:
