--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,6 +13,7 @@ build:
       - pip install poetry
       - pip install mkdocs-material
       - pip install 'mkdocstrings[python]'
+      - pip install mkdocs-mermaid2-plugin
 
 
     post_install:
