--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "identificador-pii"
 version = "0.1.0"
-description = ""
-authors = ["Pedro Campagna <pedrohcmds@gmail.com>"]
+description = "Este pacote visa criar uma ferramenta simples que pode auxiliar pessoas que trbalham com dados a identificar se em um determinado conjunto de dados, existem dados pessoais."
+authors = ["Pedro Campagna <pedrohcmds>"]
 readme = "README.md"
 packages = [{include="identificador_pii"}]
 classifiers = [
@@ -11,6 +11,7 @@ classifiers = [
     "Topic :: Education",
     "Programming Language :: Python :: 3"
 ]
+license = "MIT"
 
 [tool.project.urls]
 "Documentação" = "https://projeto-pii-brasil.readthedocs.io/en/latest/"
