--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "identificador-pii"
 version = "0.1.0"
 description = "Este pacote visa criar uma ferramenta simples que pode auxiliar pessoas que trbalham com dados a identificar se em um determinado conjunto de dados, existem dados pessoais."
-authors = ["Pedro Campagna <pedrohcmds>"]
+authors = ["Pedro Campagna <pedrohcmds@gmail.com>"]
 readme = "README.md"
 packages = [{include="identificador_pii"}]
 classifiers = [
